fix(mobile/chat-bubbles): Prevent chat text overlap with avatar img
- Hide GPTs avatar in chat bubbles for mobile to prevent text content overlap

Changes summary:
- Prevented chat text content from overlapping with the GPTs avatar in chat bubbles on mobile devices, improving readability and the overall user interface.

--- a/src/sass/elements/_right--main.scss
+++ b/src/sass/elements/_right--main.scss
@@ -282,9 +282,11 @@ main [data-testid^='conversation-turn-'] {
 			}
 		}
 
-		/* GPT avatar in its chat bubbles */
+		/* GPT avatar in its chat bubbles: with img is the GPTs Store item avatar, and with svg is gpt logo */
 		@include dev(mob) {
-			.gizmo-bot-avatar:has(svg[role='img']) {
+
+			.gizmo-bot-avatar:has(svg[role='img']),
+			.gizmo-shadow-stroke:has(img) {
 				visibility: hidden;
 			}
 		}
